# gllvm

./: CLAUDE.md  LICENSE  README.md  paper_pitch.md  pyproj.toml  pyproject.toml
.claude/: settings.json
.github/workflows/: publish.yml  workflow.yml
dev/: glmfit.ipynb  poisson_glm.ipynb  verify_map_encoder.ipynb  zqe_fixed_Z.ipynb  zqe_fixed_seed_lbfgs.ipynb
dev/LBFGS_fixedseed/: CLAUDE.md  zqe_lbfgs.ipynb
dev/gaussian_map/: zqe_gaussian_map.ipynb
dev/gaussian_map_l1/: CLAUDE.md  zqe_gaussian_map_sparse.ipynb  zqe_poisson_map_l1.ipynb
dev/glmfit/: CLAUDE.md  glm_fit_newton.ipynb  glmfit.ipynb
dev/negativebinomial/: CLAUDE.md
dev/poisson/: poisson.ipynb
notebooks/: scvi.ipynb  test_call.ipynb  test_ed.excalidraw  test_gradient_detach.ipynb
paper/: CLAUDE.md  appendix_C.tex  consistency_map_encoder.md  definition_MLE.tex  gp_lvm_zqe_idea.md  gpt.tex  jmlr2e.sty  main.aux  main.out  main.tdo  main.tex  maths_summary.tex  notations.tex  old_proofs.tex  old_text_2025-09-06.tex  preamble.sty  proof_of_convergence_draft.tex  references.bib  zqe_likelihood_form.tex
paper/old/: appendix_A.tex  (+2 more)
playground/: _build_poisson_quantile_gllvm_nb.py  _build_poisson_quantile_nb.py  bernoulli.ipynb  overcomplete_lasso_poisson.ipynb  pbmc_sparse_programs.ipynb  pbmc_varimax_baseline.ipynb  poisson.ipynb  poisson_encoder_quantile.ipynb  poisson_full.ipynb  poisson_full_score.ipynb  poisson_quantile.ipynb  vae_encoder.ipynb
simulations/: gllvm_sims.ipynb  gllvm_sims_vae.ipynb  gllvm_sims_zqe.ipynb  gradient_and_scale.py  posterior_tests.ipynb
tests/: test_basic.py
(+128 files in other folders)
