[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gllvm"
version = "0.1.0"
description = "A brief description of the gllvm package."
authors = [
    { name = "Your Name", email = "youremail@example.com" }
]
license = { text = "MIT" }
dependencies = [
    "torch >= 1.8.0",
]
requires-python = ">=3.10"
